# Poetry-EdgeCaseTesting

./: LICENSE  README.md  main.py  pyproject.toml
hooks/: hook-flask_compress.py
package_name/: __init__.py
