[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "package_name"
version = "0.3.0"
description = "Example Package"
authors = [ "Kyle King <KyleKing@users.noreply.github.com>",]

[tool.poetry.dependencies]
python = ">3.7.1"
flask_compress = "1.9.0"

# [tool.poetry.dependencies.flask_compress]
# path = "../flask-compress/dist/Flask_Compress-1.9.1-py3-none-any.whl"
# git = "https://github.com/KyleKing/flask_compress.git"
# branch = "fix/version"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.2"
