[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "package_name"
version = "0.3.0"
description = "Example Package"
authors = [ "Kyle King <KyleKing@users.noreply.github.com>",]

[tool.poetry.dependencies]
python = ">3.7.1"
dash = "^1.19.0"

[tool.poetry.dev-dependencies.pyinstaller_hooks_contrib]
path = "../pyinstaller-hooks-contrib/dist/pyinstaller_hooks_contrib-2021.1-py2.py3-none-any.whl"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.2"
